--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: default
-title: Himangshu Hazarika's experiments in code
+title: Victories and Defeats in Computer Programming
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Experiments</h1>
+  <h1 class="pageTitle">Lates Escapades</h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
