--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Victories and Defeats in Computer Programming
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Lates Escapades</h1>
+  <h1 class="pageTitle">Latest Escapades</h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
